UserService and UserController implementation is almost done
