# QueR.Application/Controllers/Backoffice/UsersController.cs
@@ -5,7 +5,9 @@ using System.Threading.Tasks;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
+using QueR.Application.DTOs;
 using QueR.BLL.Services.User;
+using QueR.Domain.Entities;
 
 namespace QueR.Application.Controllers.Backoffice
 {
@@ -21,11 +23,95 @@ namespace QueR.Application.Controllers.Backoffice
             this.userService = userService;
         }
 
-        [HttpPost]
+        [HttpPost("admins")]
         [Authorize(Roles = "operator")]
+        public async Task<ActionResult<int>> CreateAdmin([FromBody] UserModel model)
+        {
+            return Ok(await userService.CreateAdmin(model));
+        }
+
+        [HttpPost("employees")]
+        [Authorize(Roles = "administrator")]
+        public async Task<ActionResult<int>> CreateEmployee([FromBody] UserModel model)
+        {
+            return Ok(await userService.CreateEmployee(model));
+        }
+
+        [HttpPost("managers")]
+        [Authorize(Roles = "administrator")]
+        public async Task<ActionResult<int>> CreateManager([FromBody] UserModel model)
+        {
+            return Ok(await userService.CreateManager(model));
+        }
+
+        [HttpPost("users")]
         public async Task<ActionResult<int>> CreateUser([FromBody] UserModel model)
         {
-            return Ok(await userService.CreateAdminUser(model));
+            return Ok(await userService.CreateSimpleUser(model));
         }
+
+        [HttpGet("admins")]
+        [Authorize(Roles = "operator")]
+        public async Task<ActionResult<IEnumerable<ApplicationUserDto>>> GetAdmins()
+        {
+            var admins = await userService.GetAdministrators();
+            return Ok(admins.Select(c => new ApplicationUserDto
+            {
+                Id = c.Id,
+                FirstName = c.FirstName,
+                LastName = c.LastName,
+                Email = c.Email,
+                Gender = c.Gender,
+                Address = c.Address ?? "-",
+                AdministratedCompany = c.AdministratedCompany?.Name ?? "-"
+            }));
+        }
+
+        [HttpGet("employees")]
+        [Authorize(Roles = "operator")]
+        public async Task<ActionResult<IEnumerable<ApplicationUserDto>>> GetEmployees()
+        {
+            var employees = await userService.GetEmployees();
+            return Ok(employees.Select(c => new ApplicationUserDto
+            {
+                Id = c.Id,
+                FirstName = c.FirstName,
+                LastName = c.LastName,
+                Email = c.Email,
+                Gender = c.Gender,
+                Address = c.Address ?? "-",
+                Company = c.Company?.Name ?? "-"
+            }));
+        }
+
+        [HttpGet("managers")]
+        [Authorize(Roles = "operator")]
+        public async Task<ActionResult<IEnumerable<ApplicationUserDto>>> GetManagers()
+        {
+            var managers = await userService.GetManagers();
+            return Ok(managers.Select(c => new ApplicationUserDto
+            {
+                Id = c.Id,
+                FirstName = c.FirstName,
+                LastName = c.LastName,
+                Email = c.Email,
+                Gender = c.Gender,
+                Address = c.Address ?? "-",
+                ManagedWorksite = c.ManagedSite?.Name ?? "-"
+            }));
+        }
+
+        [HttpGet("users")]
+        [Authorize(Roles = "operator")]
+        public async Task<ActionResult<IEnumerable<ApplicationUserDto>>> GetSimpleUsers()
+        {
+            var users = await userService.GetSimpleUsers();
+            return Ok(users.Select(c => new ApplicationUserDto
+            {
+                Id = c.Id,
+                Email = c.Email
+            }));
+        }
+
     }
 }
