# QueR.Application/DTOs/ApplicationUserDto.cs
@@ -12,8 +12,12 @@ namespace QueR.Application.DTOs
         public int Id { get; set; }
         public string FirstName { get; set; }
         public string LastName { get; set; }
+        public string Email { get; set; }
         public Gender Gender { get; set; }
         public string Address { get; set; }
         public string AssignedQueue { get; set; }
+        public string AdministratedCompany { get; set; }
+        public string ManagedWorksite { get; set; }
+        public string Company { get; set; }
     }
 }
